@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Launchpad #245649:  the Products package is now a proper
+        "namespace package" under the rules specified by setuptools.
+
       - zope.viewlets: updated to 3.4.2
 
       - zope.sendmail: updated to 3.5.0 (fixing Launchpad #230831)
